turtleart.flower.Flower.scala.error
Compilation error:
Flower:2: error: not found: value octogone
  octogone()
  ^