turtleart.flower.Flower.scala.code
override def run() {
  octogone()
}

def octogonne () {
  for (i <- 0 to 7) {
    avance(50)
    droite(360/8)
  }
}